Fixes non-split stretch mode

--- a/modules/backend/formwidgets/markdowneditor/assets/less/markdowneditor.less
+++ b/modules/backend/formwidgets/markdowneditor/assets/less/markdowneditor.less
@@ -128,15 +128,20 @@
             float: none;
             height: auto;
             position: absolute;
+            left: 0;
             right: 0;
             top: 0;
             bottom: 0;
             margin-top: 40px;
         }
 
-        .editor-write {
-            left: 0;
-            right: auto;
+        &.mode-split {
+            .editor-preview {
+                left: auto;
+            }
+            .editor-write {
+                right: auto;
+            }
         }
     }
 
